@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2000, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021 Contributors to the Eclipse Foundation
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0, which is available at
@@ -161,7 +162,7 @@ public class SSLConnectionHandler extends SocketConnectionHandler {
         if (Boolean.getBoolean("imq.registerSSLProvider") && isRegistered == false) {
             synchronized (this.getClass()) {
                 String name = connection.getProperty(ConnectionConfiguration.imqSSLProviderClassname);
-                Provider provider = (Provider) Class.forName(name).newInstance();
+                Provider provider = (Provider) Class.forName(name).getDeclaredConstructor().newInstance();
                 Security.addProvider(provider);
                 isRegistered = true;
             }
